data/derived/comb/progs/unify/prog6773.ml.out
Characters 68-99:
  else bigAdd [l] [mulByDigit (i-1) l];;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
